--- a/jupyter/ml_learne.ipynb
+++ b/jupyter/ml_learne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -129,9 +129,9 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "data = pd.read_csv('../data/fraudTrain.csv')\n",
+    "\n",
     "print(data.info()) \n",
     "print(data.head()) \n",
-    "\n",
     "print(data.isnull().sum())\n",
     "\n",
     "data['trans_date_trans_time'] = pd.to_datetime(data['trans_date_trans_time'])\n",
@@ -141,6 +141,8 @@
     "data['hour'] = data['trans_date_trans_time'].dt.hour\n",
     "\n",
     "data = data.drop('trans_date_trans_time', axis=1)\n",
+    "\n",
+    "data_original = data.copy()\n",
     "\n",
     "labelencoder = LabelEncoder()\n",
     "for col in data.select_dtypes(include=['object']).columns:\n",
@@ -159,8 +161,9 @@
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
     "\n",
-    "data['is_fraud_pred'] = model.predict(X) \n",
-    "data.to_csv('transacoes_com_fraudes_identificadas.csv', index=False)\n"
+    "data_original['is_fraud_pred'] = model.predict(X) \n",
+    "\n",
+    "data_original.to_csv('../data/transacoes_com_fraudes_identificadas.csv', index=False)\n"
    ]
   }
  ],
